[tool.poetry]
name = "arms-trade"
version = "0.1.0"
description = ""
authors = ["bartek-c <bartek.calka96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.14.4"
plotly = "^5.22.0"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
folium = "^0.16.0"
seaborn = "^0.13.2"
pycountry = "^23.12.11"
jupyter = "^1.0.0"
geopy = "^2.4.1"
pycountry-convert = "^0.7.2"
chart-studio = "^1.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
